# models/atendente.go
@@ -5,7 +5,7 @@ import "gopkg.in/validator.v2"
 type Atendente struct {
 	Id              int
 	Nome            string `json:"nome"`
-	Celular         string `json:"telefone" validate:"regexp=^[(]+[0-9]+[)]+[0-9]{9}"`
+	Celular         string `json:"celular" validate:"regexp=^[(]+[0-9]+[)]+[0-9]{9}"`
 	Idquadrohorario int
 }
 
